--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!--HEADER STARTS-->
  
 <header class="prospect-header-section">
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
        <div class="container">
             <a href="#" class="navbar-brand">
                 <img style="width: 150px" src="img/logo2.png" alt="logo" class="img-fluid">
@@ -292,8 +292,7 @@
   
 <!-- ACCREDITATIONS STARTS -->
 <section class="accreditaions">
-    <div class="container">
-       
+    <div class="container"> 
         <div class="row">
             <div class="col-md-5 offset-md-1">
                 <div class="gdpr-img">
@@ -301,9 +300,9 @@
                 </div>
             </div>            
             <div class="col-md-5 offset-md-1">
-               <div class="accreditations">
+               <div class="accreditations2">
                     <h2 class="my-5">Our Accreditations</h2>
-                    <div class="dual-corner-img mt-">
+                    <div class="dual-corner-img">
                         <img src="img/img-4.png" alt="dual">
                     </div>
                </div>
