--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!--HEADER STARTS-->
  
 <header class="prospect-header-section">
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+    <nav class="navbar bg-white navbar-expand-lg navbar-light fixed-top">
        <div class="container">
             <a href="#" class="navbar-brand">
                 <img style="width: 150px" src="img/logo2.png" alt="logo" class="img-fluid">
@@ -316,10 +316,10 @@
   <footer class="footer-area">
       <div class="container">
           <div class="row">
-              <div class="col-6 col-md-2">
+              <div class=" col-md-2">
                   <div class="footer-item">
                          <a href="#">
-                             <img src="img/logo.png" alt="">
+                             <img src="img/logo.png" alt="" style="width: 30%">
                          </a>
                           
                           <p>Prospect IQ provides quality B2B contact data to help you raach your next customers</p>                   
