--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="customers-section-area">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mt-5 order-sm-1 order-lg-2">
+                <div class="col-lg-6 mt-5 order-2 order-lg-1">
                     <h1>Quality B2B contact data to help you reach your next customers</h1>
                     <p class="my-4">Access over 3.5 million decision makers across the UK which you can contact via <strong>Email, Telephone</strong> and <strong>Direct Mail</strong></p>
                     <div class="customers-buttons mt-5">
@@ -63,7 +63,7 @@
                         <a href="#" class="btn text-light btn-lg" style="">Book a discovery call</a>
                     </div>
                 </div>
-                <div class="col-lg-6 order-sm-2 order-lg-2">
+                <div class="col-lg-6 order-1 order-lg-2">
                     <img src="img/Asset-1-2.svg" alt="asset">
                 </div>
             </div>
@@ -82,8 +82,7 @@
                             <div class="video-thumbnail-one">
                                 <img src="img/video-thumbnail.png" alt="">            
                             </div>
-                             <div class="video-thumbnail-two">
-                                <img src="img/Mask-Group-1.png" alt="">
+                             <div class="video-thumbnail-two">                            
                             </div>
                             
                         </div>
@@ -114,9 +113,7 @@
               <p>We are committed to suppporting our clients develop performing marketing campaigns and grow thier business by uilising quality and accourate B2B data</p>
               <div class="circle" style="width: 15px; height: 15px; background: #8B79FA; border-radius: 50%; margin-left: 50px"></div>
           </div>
-          <div class="data-list-background-img">
-              <img src="img/bg-4-1.png" alt="">
-          </div>
+      
           <div class="row">
               <div class="col-sm-6 col-md-4">
                   <div class="single-data-item my-5">
@@ -190,7 +187,7 @@
         <div class="owl-carousel owl-theme">
         <div class="item">
             <div class="row mt-5">
-                <div class="col-md-6">
+                <div class="col-md-6 order-2 order-lg-1">
                     <div class="testomonial-description">
                         <h2 class="h2 mb-5">"Highly recommend!"</h2>
                         <p>"We have been using Prospect IQ for a while now. We find the data is accurate and the response times for counts and production are very efficient. They have now helped us on many campaigns and we will continue to use them. Great service from the team to top it all off. Highly recommened!"</p>
@@ -199,7 +196,7 @@
                         <h5>Lead Machine</h5>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 order-1 order-lg-2">
                     <div class="testomonial-image">
                         <img src="img/mike-guest-150x150.png" alt="">
                     </div>
@@ -208,7 +205,7 @@
         </div>
     <div class="item">
         <div class="row mt-5">
-            <div class="col-md-6">
+            <div class="col-md-6 order-2 order-lg-1">
                 <div class="testomonial-description">
                     <h2 class="h2 mb-5">"Highly recommend!"</h2>
                     <p>"We have been using Prospect IQ for a while now. We find the data is accurate and the response times for counts and production are very efficient. They have now helped us on many campaigns and we will continue to use them. Great service from the team to top it all off. Highly recommened!"</p>
@@ -217,7 +214,7 @@
                     <h5>Lead Machine</h5>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-1 order-lg-2">
                 <div class="testomonial-image">
                     <img src="img/shane.png" alt="">
                 </div>
@@ -226,7 +223,7 @@
     </div>
     <div class="item">
         <div class="row mt-5">
-            <div class="col-md-6">
+            <div class="col-md-6 order-2 order-lg-1">
                 <div class="testomonial-description">
                     <h2 class="h2 mb-5">"Highly recommend!"</h2>
                     <p>"We have been using Prospect IQ for a while now. We find the data is accurate and the response times for counts and production are very efficient. They have now helped us on many campaigns and we will continue to use them. Great service from the team to top it all off. Highly recommened!"</p>
@@ -235,7 +232,7 @@
                     <h5>Lead Machine</h5>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-1 order-lg-2">
                 <div class="testomonial-image">
                     <img src="img/Kaushal-Patel.png" alt="">
                 </div>
@@ -296,12 +293,12 @@
 <section class="accreditaions">
     <div class="container"> 
         <div class="row">
-            <div class="col-md-5 offset-md-1">
+            <div class="col-md-5 offset-md-1 order-2 order-md-1">
                 <div class="gdpr-img">
                     <img src="img/accreditations-gdpr.png" alt="">
                 </div>
             </div>            
-            <div class="col-md-5 offset-md-1">
+            <div class="col-md-5 offset-md-1 order-1 order-md-2">
                <div class="accreditations2">
                     <h2 class="my-5">Our Accreditations</h2>
                     <div class="dual-corner-img">
@@ -341,7 +338,7 @@
                       <a href="#">Privacy Policy</a>
                   </div>
               </div>
-              <div class="col-6 col-md-3">
+              <div class="col-12 col-md-3">
                   <div class="footer-item-social">
                       <h5>Social Media</h5>
                       <div class="social-link">
