Fully responsive design added

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <a href="#" class="navbar-brand">
                 <img src="img/logo2.png" alt="logo" class="img-fluid">
             </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navBar"><span class="navbar-toggler-icon"></span></button>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navBar"><span class=""><i class="fas fa-grip-lines"></i></span></button>
             <div id="navBar" class="collapse navbar-collapse">
                 <ul class="navbar-nav mx-auto menu">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Business Data</a>
                     </li>
                      <li class="nav-item">
-                        <a href="#" class="nav-link">About Us</a>
+                        <a href="#" class="nav-link">About Us</a> 
                     </li>
                      <li class="nav-item">
                         <a href="#" class="nav-link">Resources</a>
